--- a/src/scss/partials/variable.scss
+++ b/src/scss/partials/variable.scss
@@ -17,6 +17,8 @@ $color-border:#E2E2E2;
 $red-light:#FFEAEE;
 $color-green:#6fd468;
 $green-light:#f4fcf3;
+$green-highlight:#5ACE52;
+$grey-light: #BDBDBD;
 
 
 // font-family
