--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,5 +11,7 @@
 @import "layout/login";
 @import "layout/accordion";
 @import "pages/home";
+@import "pages/resources";
 @import "base/form";
+@import "base/pagination";
 
