resource files moved to main app

--- a/src/scss/base/typography.scss
+++ b/src/scss/base/typography.scss
@@ -123,13 +123,13 @@
      top: -.5em
  }
  
- a {
+ Link {
      color: $color-primary;
      text-decoration: none;
-     background-color: transparent
+     background-color: transparent;
  }
  
- a:hover {
+ Link:hover {
      color: $color-primary;
      text-decoration: none;
  }
