--- a/src/scss/partials/variable.scss
+++ b/src/scss/partials/variable.scss
@@ -2,20 +2,20 @@
 $color-primary:#000000;
 $primary-light:#757575;
 $color-white:#ffffff;
-$color-secondary:#D9002A;
+$color-secondary:#F32F30;
 $color-bg:#f5f5f5;
 $color-bg-text:#B6B6B6;
 $color-blue:#174BDD;
 $blue-light:#96A5CD;
 $color-grey:#e3e3e3;
-$color-error:#F3A201;
+$color-error:#FFC000;
 $color-heading:#3b3b3b;
 $color-nav:#27293d;
 $color-light:#ffffff;
 $color-focus:#E6E9F3;
 $color-border:#E2E2E2;
 $red-light:#FFEAEE;
-$color-green:#6fd468;
+$color-green:#5ACE52;
 $green-light:#f4fcf3;
 $green-highlight:#5ACE52;
 $grey-light: #BDBDBD;
@@ -24,7 +24,6 @@ $grey-light: #BDBDBD;
 // font-family
 
 $openSanse:'Open Sans', sans-serif;
-$montserrat:'Montserrat', sans-serif;
  
 
 //Break point
