--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 @import "base/base";
 @import "base/button";
 @import "base/table";
+@import "base/tab";
 @import "partials/variable";
 @import "layout/breadcrumb";
 @import "layout/header";
@@ -12,6 +13,8 @@
 @import "layout/accordion";
 @import "pages/home";
 @import "pages/resources";
+@import "pages/app";
+@import "pages/map";
 @import "base/form";
 @import "base/pagination";
 
