--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -14,7 +14,7 @@ footer {
             h5{
                 color:$color-blue;
                 font-weight: 700;
-                font-size:2rem;
+                font-size:1.5rem;
                 margin-bottom: 3rem;
             }
             &.about-widget{
@@ -65,6 +65,7 @@ footer {
                         }
                         span{
                             color:$primary-light;
+                            font-size:.875rem;
                         }
                         &:last-child{
                             margin-bottom: 0;
