--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -25,7 +25,7 @@
 
             .country-logos {
                 align-items: center;
-                margin-bottom: 1.5rem;
+                margin-bottom: .5rem;
 
                 a {
                     width: 30px;
@@ -56,7 +56,7 @@
                     a {
                         display: block;
                         padding: 1rem 1.5rem;
-                        font-size: 1rem;
+                        font-size: .875rem;
                         text-transform: uppercase;
                         position: relative;
                         font-weight: 700;
@@ -223,51 +223,6 @@
                 }
             }
 
-            .header-btns {
-                margin-left: 2rem;
-                position: relative;
-
-
-                .ysewa-button {
-                    text-transform: initial;
-                    font-size: .875rem;
-                    font-family: $montserrat;
-                    display: flex;
-                    align-items: center;
-
-                    i {
-                        font-family: 'Material Icons';
-                        display: inline-flex;
-                        margin-right: .5rem;
-                    }
-
-                    &:last-child {
-                        margin-left: .5rem;
-                    }
-                }
-
-                .dropdown {
-                    margin-left: 1rem;
-                    border: 0;
-
-                    .dropdown-menu {
-                        padding: 0;
-                    }
-
-                    a.dropdown-item {
-                        display: block;
-                        color: $color-bg-text;
-                        font-size: 0.88rem;
-                        padding: 0.625rem 1.25rem;
-                        border-bottom: 1px solid $color-border;
-                        text-transform: capitalize;
-
-                        &:hover {
-                            color: $color-secondary;
-                        }
-                    }
-                }
-            }
 
         }
 
@@ -355,7 +310,7 @@
 
 
 
-@media screen and (max-width:$mb-xl) {
+@media screen and (max-width:$pt-tab) {
     .site-header {
         .headerWrap {
             .headLeft {
