reports page created

--- a/src/scss/partials/variable.scss
+++ b/src/scss/partials/variable.scss
@@ -17,7 +17,7 @@ $color-border:#E2E2E2;
 $red-light:#FFEAEE;
 $color-green:#5ACE52;
 $green-light:#f4fcf3;
-$green-highlight:#5ACE52;
+$green-highlight:#E8F8E7;
 $grey-light: #BDBDBD;
 
 
