--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -1,5 +1,6 @@
 .css-2b097c-container {
-    width: 180px;
+    max-width:  350px;
+    min-width: 150px;
 }
 .openspace-button:hover{
     text-decoration: none;
