--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -1,4 +1,4 @@
-.css-2b097c-container {
+/* .css-2b097c-container {
     max-width:  350px;
     min-width: 150px;
 }
@@ -19,7 +19,4 @@ ul .scrollbar-container{
     max-width:  350px;
     min-width: 150px;
 
-}
-.map-sidebar{
-    height: 90vh !important;
-}
+} */
