--- a/src/scss/base/tab.scss
+++ b/src/scss/base/tab.scss
@@ -1,21 +1,22 @@
 .nav-tabs {
   border: none;
+  @include flexBetween;
 
   .nav-item {
-    margin: 0 0 1rem 0;
-    margin-right: 1rem;
-
+    margin:0;
+    position: relative;
+    text-align: left;
     .nav-link {
       border: 0;
       padding: 0.625rem 1rem;
-      padding-left: 3.5rem;
       text-transform: capitalize;
       font-weight: 500;
       @include animate_all(all 0.5s);
       background: $color-grey;
       position: relative;
       border-radius: 1.5rem 0 0 1.5rem;
-
+      border:0;
+      padding-left:0;
       span {
         width: 44px;
         height: 44px;
@@ -40,6 +41,16 @@
           color: $color-white;
           box-shadow: 0 0 12px 0 rgba(184, 184, 184, 0.4)
         }
+        &::after{
+          position: absolute;
+          left:0;
+          bottom:0;
+          content:'';
+          width:50px;
+          height:2px;
+          background-color: $color-blue;
+          display: block;
+        }
       }
     }
   }
@@ -48,16 +59,19 @@
     .nav-item{
       margin-bottom: 0;
       .nav-link{
-        padding:0.5rem;
         border-radius: 0;
         background-color:transparent;
-        font-size:0.875rem;
-        border-bottom: 1px solid transparent;
+        font-size:.875rem;
+        text-transform: uppercase;
+        border:none;
+        font-weight: 700;
+        color:$grey-light;
         &.active,
         &:hover{
-          border-bottom: 1px solid $color-secondary;
-          color:$color-secondary;
+          color:$color-primary;
+          
         }
+        
       }
       &:last-child{
         margin-right: 0;
@@ -85,58 +99,3 @@
   }
 }
 
-.mapdanda-tab {
-  .nav-tabs {
-    justify-content: center;
-    .nav-item {
-      margin: 0 0 1rem 0;
-      margin-right: 1rem;
-
-      .nav-link {
-        border: 0;
-        padding: 0.2rem 1rem;
-        text-transform: capitalize;
-        font-weight: 400;
-        @include animate_all(all 0.5s);
-        background-color: transparent;
-        position: relative;
-        border-radius: 0;
-        color: $color-white;
-        position: relative;
-        samp{
-          margin-right: 0.4rem;
-        }
-        &.active,
-        &:hover {
-          position: relative;
-          background: lighten($color-secondary, 5%);
-          color: $color-white;
-
-        }
-
-        &.active {
-          &::before {
-            content: '';
-            border-color: transparent $color-secondary;
-            border-style: solid;
-            border-width: 10px 0px 10px 12px;
-            height: 0px;
-            width: 0px;
-            position: absolute;
-            bottom:-16px;
-            right:0;
-            left:0;
-            margin:0 auto;
-            transform:rotate(90deg);
-            display: inline-block;
-          }
-        }
-      }
-    }
-  }
-}
-.general-info{
-  p{
-    font-size:0.775rem;
-  }
-}
