--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -1,7 +1,13 @@
-/* .css-2b097c-container {
+.css-2b097c-container {
     max-width:  350px;
     min-width: 150px;
-}
+ }
+.css-14jk2my-container{
+    max-width:  350px;
+    min-width: 150px;
+
+} 
+/*
 .openspace-button:hover{
     text-decoration: none;
 }
@@ -14,9 +20,4 @@
 }
 ul .scrollbar-container{
     height: 350px !important;
-}
-.css-14jk2my-container{
-    max-width:  350px;
-    min-width: 150px;
-
 } */
