--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -19,6 +19,10 @@ footer {
             }
             &.about-widget{
                 padding-right: 1.5rem;
+                p{
+                    color:$primary-light;
+                    font-size:.875rem;
+                }
                 .footer-logos{
                     @include flexBetween;
                     align-items: center;
