--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -1,6 +1,7 @@
 .css-2b097c-container {
-    max-width:  350px;
+    max-width:  400px !important;
     min-width: 150px;
+    width: auto;
  }
 .css-14jk2my-container{
     max-width:  350px;
