--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -8,6 +8,32 @@
     min-width: 150px;
 
 } 
+
+.routeWrapper{
+    width: 200px;
+    height: 150px;
+    background-color: rgba(247, 241, 241, 0.8);
+    overflow: auto;
+}
+.desccard{
+    width:auto;
+    padding: 4px;
+    cursor: pointer;
+
+}
+.pathactive{
+    width:auto;
+    padding: 4px;
+    cursor: pointer;
+    background-color: rgb(170, 163, 163);
+
+}
+
+
+
+
+
+
 /*
 .openspace-button:hover{
     text-decoration: none;
