--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -50,6 +50,33 @@
 }
 
 
+.marker-cluster-small {
+    background-color:  rgba(8, 156, 224, 0.9)  !important;
+}
+.marker-cluster-small div {
+    background-color:  rgba(8, 156, 224, 0.9)  !important;
+}
+.marker-cluster-medium {
+    background-color:  rgba(8, 156, 224, 0.9)  !important ;
+}
+.marker-cluster-medium div {
+    background-color: rgba(8, 156, 224, 0.9) !important;
+}
+.marker-cluster-large {
+    background-color: rgba(181, 179, 179,0.9) !important;
+}
+.marker-cluster-large div {
+    background-color: rgba(0, 98, 142, 0.9) !important;
+}
+.marker-cluster span {
+    color: white !important;
+}
+.marker-cluster div {
+    width: 30px !important;
+    height: 30px !important;
+}
+
+
 
 
 
