--- a/src/components/OpenSpace/OpenSpaceCSS.css
+++ b/src/components/OpenSpace/OpenSpaceCSS.css
@@ -1,4 +1,4 @@
-.css-2b097c-container {
+/* .css-2b097c-container {
     max-width:  400px !important;
     min-width: 150px;
     width: auto;
@@ -10,45 +10,16 @@
 } 
 
 
-.routeWrapper{
-    width: 200px;
-    height: 180px;
-    overflow: auto;
 
-}
 
 
 #north{
     height: 50px;
     width: 50px;
-}
+} */
 
 
-.marker-cluster-small {
-    background-color:  rgba(8, 156, 224, 0.9)  !important;
-}
-.marker-cluster-small div {
-    background-color:  rgba(8, 156, 224, 0.9)  !important;
-}
-.marker-cluster-medium {
-    background-color:  rgba(8, 156, 224, 0.9)  !important ;
-}
-.marker-cluster-medium div {
-    background-color: rgba(8, 156, 224, 0.9) !important;
-}
-.marker-cluster-large {
-    background-color: rgba(181, 179, 179,0.9) !important;
-}
-.marker-cluster-large div {
-    background-color: rgba(0, 98, 142, 0.9) !important;
-}
-.marker-cluster span {
-    color: white !important;
-}
-.marker-cluster div {
-    width: 30px !important;
-    height: 30px !important;
-}
+
 
 
 
