--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -1,7 +1,102 @@
 .openSpace-map {
     padding: 0;
-    
-    
+
+    .routeWrapper {
+        max-width: 200px;
+        width: 200px;
+        max-height: 180px;
+        overflow-y: auto;
+        margin-right: 5rem;
+        background-color: $color-white;
+        padding: 0;
+        &.leaflet-control{
+            margin:0 !important;
+        }
+        
+
+        #legendtitle {
+            background: transparent;
+            color: $color-primary;
+            text-transform: uppercase;
+            font-weight: 600;
+            border-bottom: 1px solid $color-border;
+            margin-bottom: .5rem;
+            font-size: .775rem;
+            text-align: left;
+            padding: .5rem .6125rem;
+        }
+
+        .desccard {
+            padding: .6125rem;
+            h6{
+                font-weight: 600;
+                font-size: .875rem;
+            }
+
+            &.pathactive {
+                background-color: $green-highlight;
+            }
+        }
+
+    }
+
+    .marker-cluster-small,
+    .marker-cluster-medium,
+    .marker-cluster-large {
+        background-color: rgba($color-blue, .4) !important;
+        @include flexvr;
+
+        div {
+            background-color: $color-blue;
+            width: 24px;
+            height: 24px;
+            margin: 0;
+            @include flexvr;
+            span{
+                color:$color-white;
+            }
+        }
+    }
+
+    .marker-cluster-small {
+        width: 36px;
+        height: 36px;
+
+        div {
+            width: 26px;
+            height: 26px;
+        }
+    }
+
+    .marker-cluster-medium {
+        width: 40px;
+        height: 40px;
+
+        div {
+            width: 30px;
+            height: 30px;
+        }
+    }
+
+    .marker-cluster-large {
+        width: 44px;
+        height: 44px;
+
+        div {
+            width: 34px;
+            height: 34px;
+        }
+    }
+
+    // .marker-cluster-large {
+    //     background-color: rgba(181, 179, 179,0.9);
+    // }
+    // .marker-cluster-large div {
+    //     background-color: rgba(0, 98, 142, 0.9);
+    // }
+    // .marker-cluster span {
+    //     color:$color-white !important;
+    // }
     .container-fluid {
         max-width: 100%;
         padding: 0;
@@ -10,51 +105,60 @@
     .map-wrapper {
         position: relative;
         width: 100%;
-       
 
-        
-        .leaflet-control-container{
-            .leaflet-left{
-                left:auto;
-                right:3rem;
-                &.leaflet-top{
-                    top:auto;
-                    bottom:5rem;
-        
+
+
+        .leaflet-control-container {
+            .leaflet-left {
+                left: auto;
+                right: 3rem;
+
+                &.leaflet-top {
+                    top: auto;
+                    bottom: 5rem;
+
                 }
-                .leaflet-bar{
-                   border:none;
-                   a{
-                    width: 36px;
-                    height: 36px;
-                    line-height: 36px;
-                    color:$primary-light;
-                    @include animate_all(all .5s);
-                    &:hover {
-                        background-color: $green-highlight;
-                        color: $color-green;
-                       }
-                   }
-                   
+
+                .leaflet-bar {
+                    border: none;
+
+                    a {
+                        width: 36px;
+                        height: 36px;
+                        line-height: 36px;
+                        color: $primary-light;
+                        @include animate_all(all .5s);
+
+                        &:hover {
+                            background-color: $green-highlight;
+                            color: $color-green;
+                        }
+                    }
+
                 }
-                
+                &.leaflet-bottom{
+                    right:7rem;
+                }
+
             }
-            .leaflet-control-layers-toggle{
+
+            .leaflet-control-layers-toggle {
                 width: 36px;
                 height: 36px;
                 background-size: 16px 16px;
             }
-            .leaflet-right{
-                right:3rem;
-                &.leaflet-top{
-                    top:auto;
-                    bottom: 1rem;
-                }
-                .leaflet-control{
-                    margin:0;
-                }
-            }
-            
+
+            // .leaflet-right{
+            //     right:3rem;
+            //     &.leaflet-top{
+            //         top:0;
+            //         bottom: auto;
+            //     }
+            //     .leaflet-control{
+            //         margin:0;
+            //     }
+            // }
+
         }
 
         .leaflet-popup.popupCustom {
@@ -136,36 +240,17 @@
         .leaflet-popup-close-button {
             color: $color-white;
         }
-        .leaflet-container.leaflet-touch-drag.leaflet-touch-zoom{
+
+        .leaflet-container.leaflet-touch-drag.leaflet-touch-zoom {
             z-index: 1;
             height: calc(100vh - 165px);
         }
+
         .leaflet-container {
             z-index: 1;
-            
+
         }
-        .routeWrapper{
-            margin-right: 5rem;
-            background-color: $color-white;
-            padding:0;
-            #legendtitle{
-                background:transparent;
-                color:$color-primary;
-                text-transform: uppercase;
-                font-weight: 600;
-                border-bottom:1px solid $color-border;
-                margin-bottom: .5rem;
-                font-size: .775rem;
-                text-align: left;
-                padding:.5rem .6125rem;
-            }
-            .desccard{
-                padding:.6125rem;
-                &.pathactive{
-                    background-color: $green-highlight;
-                }
-            }
-        }
+
 
         .map-sidebar {
             // position: absolute;
@@ -191,7 +276,7 @@
                 //     font-weight: 700;
                 //     color: $color-white;
                 //         background-color: $color-blue;
-                   
+
                 // }
 
                 &.rotated {
@@ -203,7 +288,8 @@
                 &:hover {
                     background-color: $color-green;
                     color: $color-white;
-                    i{
+
+                    i {
                         background-color: $color-green;
                     }
                 }
@@ -266,10 +352,13 @@
                         display: flex;
                         text-align: center;
                         flex-wrap: nowrap;
-                        .css-2b097c-container, .css-14jk2my-container{
-                            width:100%;
-                            &:nth-child(2){
-                                margin:0 1rem;
+
+                        .css-2b097c-container,
+                        .css-14jk2my-container {
+                            width: 100%;
+
+                            &:nth-child(2) {
+                                margin: 0 1rem;
                             }
                         }
 
@@ -299,10 +388,12 @@
                             i {
                                 margin-right: .5rem;
                             }
-                            &:hover{
-                                color:$color-green;
-                                i{
-                                    color:$color-green
+
+                            &:hover {
+                                color: $color-green;
+
+                                i {
+                                    color: $color-green
                                 }
                             }
                         }
@@ -636,17 +727,20 @@
             }
 
             .space-chart {
-                margin-top:2rem;
+                margin-top: 2rem;
+
                 .chart-legend {
                     align-items: center;
                     margin-bottom: 1rem;
 
                     .legend-list {
                         align-items: center;
-                        .symbol-content{
+
+                        .symbol-content {
                             align-items: center;
-                            
+
                         }
+
                         span {
                             color: $color-dim;
                         }
@@ -665,8 +759,9 @@
                         &:first-child {
                             margin-right: 2rem;
                         }
-                        .usable-percent{
-                            margin-left:1.5rem;
+
+                        .usable-percent {
+                            margin-left: 1.5rem;
                         }
                     }
                 }
@@ -677,14 +772,14 @@
                         width: 100%;
                         height: 30px;
                         background-color: $color-border;
-                    
+
                         &.usable {
                             background-color: $color-green;
                             position: absolute;
                             height: 100%;
-                            left:0;
-                            top:0;
-                            bottom:0;
+                            left: 0;
+                            top: 0;
+                            bottom: 0;
                         }
                     }
                 }
@@ -970,6 +1065,7 @@
         }
     }
 }
+
 @media screen and (max-width:$lg-tab) {
     .openSpace-map {
         .map-wrapper {
@@ -984,16 +1080,16 @@
                                     -ms-flex: 0 0 90%;
                                     flex: 0 0 90%;
                                     max-width: 90%;
-        
+
                                     .space-content {
-                                        padding-right:0;
-        
+                                        padding-right: 0;
+
                                         h5 {
                                             font-size: .875rem;
                                         }
                                     }
                                 }
-        
+
                                 .space-direction {
                                     -ms-flex: 0 0 10%;
                                     flex: 0 0 10%;
@@ -1002,19 +1098,21 @@
                             }
                         }
                     }
-                    .space-details{
-                        .space{
-                            .space-content{
-                                padding-right:0;
+
+                    .space-details {
+                        .space {
+                            .space-content {
+                                padding-right: 0;
                             }
                         }
                     }
+
                     .report-list {
 
                         ul {
                             li {
                                 flex-wrap: wrap;
-        
+
                                 .report-content {
                                     h5 {
                                         font-size: .875rem;
@@ -1023,30 +1121,31 @@
                             }
                         }
                     }
+
                     .general-info {
                         .suggested-content {
                             h5 {
                                 font-size: 1rem;
                             }
-        
+
                             .suggested-list {
-        
+
                                 ul {
                                     li {
                                         font-size: .875rem;
-        
+
                                         span {
                                             margin: 0 .6125rem;
                                         }
                                     }
                                 }
                             }
-        
+
                             p {
                                 font-size: .875rem;
                             }
                         }
-        
+
                         .assessment-list {
                             ul {
                                 li {
@@ -1055,12 +1154,13 @@
                             }
                         }
                     }
-        
+
                 }
             }
         }
     }
 }
+
 @media screen and (max-width:$pt-tab) {
     .openSpace-map {
         .container-fluid {
